--- a/LoginForm/Views/Home/Index.cshtml
+++ b/LoginForm/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 
 </script>
 
-<h3>Simple We API Login Form </h3>
+<h3>Simple Web API Login Form </h3>
 
 @using (Html.BeginForm("Index", "Home"))
 
