--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -19,6 +19,6 @@
 <br />
 <br />
 <br />
-<button type="submit" > Login </button>
+<input type="button" value="Register" onclick="@("window.location.href='"+Url.Action("Index","Home")+"' ");" />
 
 
