--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -7,15 +7,15 @@
 <br />
 <br />
 <br />
-<b>StudentName:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("StudentName");
+<b>StudentName:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("Sn");
 <br />
 <br />
 <br />
-<b>UserName:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("UserName");
+<b>UserName:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("Un");
 <br />
 <br />
 <br />
-<b>Password:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("Password");
+<b>Password:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("Pwd");
 <br />
 <br />
 <br />
