--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -5,17 +5,21 @@
     ViewBag.Title = "Login";
 }
 
+
 <h2>LoginForm</h2>
-<b>UserName:</b>&nbsp;&nbsp;&nbsp;&nbsp;<input id="Text1" type="text" name="UserName"/>
+<b>UserName:</b>&nbsp;&nbsp;&nbsp;&nbsp;
+<input id="Text1" type="text" name="Un" />
 <br />
 <br />
-<b>Password:</b>&nbsp;&nbsp;&nbsp;&nbsp;<input id="Text1" type="password" name="Password" />
-<br />
-<br />
-<br />
-<b>Role:</b> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input id="Text1" type="text" name="Role" />
+<b>Password:</b>&nbsp;&nbsp;&nbsp;&nbsp;
+<input id="Text1" type="password" name="Pwd" />
 <br />
 <br />
 <br />
-<input id="button" type="submit" name="Btn1" value="Login"  />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@Html.ActionLink("Register", "Register", "Registration",null,null);
+<b>Role:</b> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input id="Text1" type="text" name="Rol" />
+<br />
+<br />
+<br />
+<input id="button" type="submit" name="Btn1" value="Login" />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@Html.ActionLink("Register", "Register", "Registration", null, null);
