--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StudentPage/StudentView.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StudentPage/StudentView.cshtml
@@ -7,11 +7,11 @@
 <br />
 <br />
 <br />
-<b>StudentName:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("StudentName")
+<b>StudentName:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("Sn")
 <br />
 <br />
 <br />
-<b>AttendedDays:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("AttendedDays")
+<b>AttendedDays:</b>&nbsp;&nbsp;&nbsp;&nbsp;@Html.TextBox("Ad")
 <br />
 <br />
 <br />
