--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
@@ -10,7 +10,7 @@
     <br />
     <br />
     @Html.Label("AttendedDays:")
-    @Html.TextBox("Ad")
+    @Html.TextBox("Ads")
     <br />
     <br />
     <br />
