--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StudentPage/Student.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StudentPage/Student.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "StudentView";
 }
 
@@ -11,11 +10,11 @@
     <br />
     <br />
     @Html.Label("AttendedDays:")
-    @Html.TextBox("Ad")
+   <input type="text" value="@ViewBag.Ans" name="Ad" />
     <br />
     <br />
     <br />
-    <input type="submit" value="Show" />
+    <input type="submit" value="Show"  />
 
 
 }
