--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Register";
 }
 
@@ -11,7 +10,7 @@
     <br />
     <br />
     @Html.Label("UserName:")
-    @Html.TextBox("Sn")
+    @Html.TextBox("Un")
     <br />
     <br />
     <br />
@@ -20,5 +19,5 @@
     <br />
     <br />
     <br />  
-    <input type="submit" value="Register" onclick="@("window.location.href='"+@Url.Action("Index","Home")+"'");" />
+    <input type="submit" value="Register"  />
 }
