--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
@@ -14,7 +14,7 @@
     <br />
     <br />
     <br />
-    <input type="submit" value="Update"  onclick=""/>
+    <input type="submit" value="Update" />
     
 
 }
