--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -29,6 +29,6 @@
     <tr />
     <tr />
     <br />
-    <input type="submit" value="Register" onclick="@("window.location.href='"+@Url.Action("Index","Home")+"'");"  />
+   <input type="submit" value="Register" />
 
 }
