--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -29,6 +29,6 @@
     <tr />
     <tr />
     <br />
-   <input type="submit" value="Register" />
-
-}
+    <input type="submit" value="Register" />
+    @Html.ActionLink("Login", "Index", "Home")
+}   
