--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -9,26 +9,33 @@
     <td>
         @Html.TextBox("Un")
     </td>
-    <tr />
-    <tr />
-    <tr />
+    <br />
+    <br />
+    <br />
     <br />
     <td>Password:</td>
     <td>
         @Html.TextBox("Pwd")
     </td>
-    <tr />
-    <tr />
-    <tr />
+    <br />
+    <br />
+    <br />
     <br />
     <td>Role:</td>
     <td>
         @Html.TextBox("Rol")
     </td>
-    <tr />
-    <tr />
-    <tr />
+    <br />
+    <br />
+    <br />
     <br />
     <input type="submit" value="Login" />
-   @Html.ActionLink("Register","Register","Registration")
+    @Html.ActionLink("Register", "Register", "Registration")
+    <br />
+    <br />
+    <br />
+    if (ViewBag.Message != null)
+    {
+        <h3 style="color:red;font:bold"> @ViewBag.Message</h3>
+    }
 }
