--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
@@ -15,7 +15,14 @@
     <br />
     <br />
     <input type="submit" value="Update" />
-    
+    <br />
+    <br />
+    <br />
+    if (ViewBag.Message != null)
+    {
+        <h3 style="color:blue;font:bold"> @ViewBag.Message</h3>
+    }
+
 
 }
 
