--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 {
          <td>UserName:</td>
             <td>
-                @Html.TextBox("Un")
+                <input type="text" name="Un" required='true' />
             </td>
             <br />
             <br />
@@ -15,7 +15,7 @@
             <br />
             <td>Password:</td>
             <td>
-                @Html.TextBox("Pwd")
+                <input type="text" name="Pwd" required='true' />
             </td>
             <br />
             <br />
@@ -23,7 +23,7 @@
             <br />
             <td>Role:</td>
             <td>
-                @Html.TextBox("Rol") 
+                <input type="text" name="Rol" required='true' />
             </td>
             <br />
             <br />
