--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -7,7 +7,7 @@
 {
     <td>StudentName:</td>
     <td>
-        @Html.TextBox("Sn")
+        <input type="text" name="Sn" required='true' />
     </td>
     <br />
     <br />
@@ -15,7 +15,7 @@
     <br />
     <td>UserName:</td>
     <td>
-        @Html.TextBox("Un")
+        <input type="text" name="Un" required='true' />
     </td>
     <br />
     <br />
@@ -23,7 +23,7 @@
     <br />
     <td>Password:</td>
     <td>
-        @Html.TextBox("Pwd")
+        <input type="text" name="Pwd" required='true' />
     </td>
     <br />
     <br />
