--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -2,13 +2,15 @@
 @{
     ViewBag.Title = "Login";
 }
-
+    <div>
+        <img src="~/Image/micah-williams-lmFJOx7hPc4-unsplash.jpg" />
+    </div>
 @using (Html.BeginForm("Index", "Home", FormMethod.Post))
 {
          <td>UserName:</td>
-            <td>
-                <input type="text" name="Un" required='true' />
-            </td>
+         <td>
+             <input type="text" name="Un" required='true' />
+         </td>
             <br />
             <br />
             <br />
