--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -1,42 +1,53 @@
-﻿
+﻿<!DOCTYPE html>
 @{
     ViewBag.Title = "Login";
 }
-    <div>
-        <img src="~/Image/micah-williams-lmFJOx7hPc4-unsplash.jpg" />
-    </div>
+<div>
+    <img src="~/Image/micah-williams-lmFJOx7hPc4-unsplash.jpg" />
+</div>
 @using (Html.BeginForm("Index", "Home", FormMethod.Post))
 {
-         <td>UserName:</td>
-         <td>
-             <input type="text" name="Un" required='true' />
-         </td>
-            <br />
-            <br />
-            <br />
-            <br />
-            <td>Password:</td>
-            <td>
-                <input type="text" name="Pwd" required='true' />
-            </td>
-            <br />
-            <br />
-            <br />
-            <br />
-            <td>Role:</td>
-            <td>
-                <input type="text" name="Rol" required='true' />
-            </td>
-            <br />
-            <br />
-            <br />
-            <br />
-            <input type="submit" value="Login" />
-            @Html.ActionLink("Register", "Register", "Registration")
-            <br />
-            <br />
-            <br />
-            <br />
-           
-   
+    <style>
+        body {
+            height: 100;
+            margin: 0;
+            opacity: 0.5;
+            background-image: url('Image/micah-williams-lmFJOx7hPc4-unsplash.jpg');
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            background-attachment: fixed;
+            background-position: center;
+        }
+     </style>
+    <td>UserName:</td>
+    <td>
+        <input type="text" name="Un" required='true' />
+    </td>
+    <br />
+    <br />
+    <br />
+    <br />
+    <td>Password:</td>
+    <td>
+        <input type="text" name="Pwd" required='true' />
+    </td>
+    <br />
+    <br />
+    <br />
+    <br />
+    <td>Role:</td>
+    <td>
+        <input type="text" name="Rol" required='true' />
+    </td>
+    <br />
+    <br />
+    <br />
+    <br />
+    <input type="submit" value="Login" />
+    @Html.ActionLink("Register", "Register", "Registration")
+    <br />
+    <br />
+    <br />
+    <br />
+    
 }
