--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -7,20 +7,25 @@
 
     @using (Html.BeginForm("Index", "Home", FormMethod.Post))
     {
-        <style >.aligncenter{text-align:center}
+        <center>
+        <style>
+            .aligncenter {
+                text-align: center
+            }
 
             body {
                 height: 100%;
-                width:100%;
+                width: 100%;
                 margin: auto;
                 opacity: 0.5;
                 background-image: url('Image/micah-williams-lmFJOx7hPc4-unsplash.jpg');
                 background-repeat: no-repeat;
-                background-size: cover;
+                background-size:cover;
                 background-attachment: fixed;
                 background-position: center;
             }
         </style>
+            
         <td>UserName:</td>
         <td>
             <input type="text" name="Un" required='true' />
@@ -51,7 +56,7 @@
         <br />
         <br />
         <br />
-
+        </center>
 
     }
 
