--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StaffPage/Staff.cshtml
@@ -1,25 +1,45 @@
-﻿@{
+﻿<!DOCTYPE html>
+@{
     ViewBag.Title = "Staff";
 }
-
+<div id="form"></div>
 @using (Html.BeginForm("Staff", "StaffPage", FormMethod.Post))
 {
-    @Html.Label("StudentName:")
-    <input type="text" name="Sn" required='true' />
-    <br />
-    <br />
-    <br />
-    @Html.Label("AttendedDays:")
-<input type="text" name="Ads" required='true' />
-    <br />
-    <br />
-    <br />
-    <input type="submit" value="Update" />
-    <br />
-    <br />
-    <br />
-   
+    <center>
+        <style>
+            .aligncenter {
+                text-align: center
+            }
 
+            body {
+                height: 100%;
+                width: 100%;
+                margin: auto;
+                opacity: 0.5;
+                background-image: url('../../Image/pexels-lumn-399161.jpg');
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-attachment: fixed;
+                background-position: center;
+            }
+        </style>
+        @Html.Label("StudentName:")
+        <input type="text" name="Sn" required='true' />
+        <br />
+        <br />
+        <br />
+        @Html.Label("AttendedDays:")
+        <input type="text" name="Ads" required='true' />
+        <br />
+        <br />
+        <br />
+        <input type="submit" value="Update" />
+        <br />
+        <br />
+        <br />
 
-}
+</center>
+
+        }
+        </div>
 
