--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -48,7 +48,7 @@
             <br />
             <br />
             <input type="submit" value="Register" />
-            @Html.ActionLink("Login", "Index", "Home", null, new { @style = "color:black" })
+            @Html.ActionLink("Login", "Index", "Home", null, new { style = "color:black" })
             <br />
             <br />
             <br />
