--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -12,17 +12,26 @@
                 }
 
                 body {
-                    height: 100%;
-                    width: 100%;
+                    height: 50%;
+                    width: 50%;
                     margin: auto;
                     opacity: 0.5;
                     background-image: url('../../Image/pexels-ann-h-1762851 (1).jpg');
                     background-repeat: no-repeat;
-                    background-size: cover;
+                    background-size: 600px;
+                    height: 600px;
+                    width: 600px;
                     background-attachment: fixed;
                     background-position: center;
                 }
             </style>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
             <td>StudentName:</td>
             <td>
                 <input type="text" name="Sn" required='true' />
