--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
     @using (Html.BeginForm("Index", "Home", FormMethod.Post))
     {
-        <center>
+    <center>
         <style>
             .aligncenter {
                 text-align: center
@@ -20,11 +20,20 @@
                 opacity: 0.5;
                 background-image: url('Image/pexels-lumn-399161.jpg');
                 background-repeat: no-repeat;
-                background-size: cover;
+                background-size: 1000px;
+                height: 1000px;
+                width: -1000px;
                 background-attachment: fixed;
                 background-position: center;
             }
-        </style>  
+        </style>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
         <td>UserName:</td>
         <td>
             <input type="text" name="Un" required='true' />
@@ -55,7 +64,7 @@
         <br />
         <br />
         <br />
-        </center>
+    </center>
 
     }
 
