--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Registration/Register.cshtml
@@ -12,15 +12,15 @@
                 }
 
                 body {
-                    height: 50%;
-                    width: 50%;
+                    height: 100%;
+                    width: 100%;
                     margin: auto;
                     opacity: 0.5;
-                    background-image: url('../../Image/pexels-ann-h-1762851 (1).jpg');
+                    background-image: url('../../Image/pexels-pixabay-326311 (1).jpg');
                     background-repeat: no-repeat;
                     background-size: 600px;
                     height: 600px;
-                    width: 600px;
+                    width: -1000px;
                     background-attachment: fixed;
                     background-position: center;
                 }
@@ -32,7 +32,13 @@
             <br />
             <br />
             <br />
-            <td>StudentName:</td>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <h1 style="color:white;">Registration Form</h1>
+            <label style="color:white;font:3000;">StudentName:</label>
             <td>
                 <input type="text" name="Sn" required='true' />
             </td>
@@ -40,7 +46,7 @@
             <br />
             <br />
             <br />
-            <td>UserName:</td>
+            <label style="color:white;font:3000;">UserName:</label>
             <td>
                 <input type="text" name="Un" required='true' />
             </td>
@@ -48,7 +54,7 @@
             <br />
             <br />
             <br />
-            <td>Password:</td>
+            <label style="color:white;font:3000;">Password:</label>
             <td>
                 <input type="text" name="Pwd" required='true' />
             </td>
@@ -57,7 +63,7 @@
             <br />
             <br />
             <input type="submit" value="Register" />
-            @Html.ActionLink("Login", "Index", "Home", null, new { style = "color:black" })
+            @Html.ActionLink("Login", "Index", "Home", null, new { style = "color:white" })
             <br />
             <br />
             <br />
