--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StudentPage/Student.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/StudentPage/Student.cshtml
@@ -5,35 +5,47 @@
 <div id="form">
     @using (Html.BeginForm("Student", "StudentPage", FormMethod.Post))
     {
-        <center>
-            <style>
-                .aligncenter {
-                    text-align: center
-                }
+    <center>
+        <style>
+            .aligncenter {
+                text-align: center
+            }
 
-                body {
-                    height: 100%;
-                    width: 100%;
-                    margin: auto;
-                    opacity: 0.5;
-                    background-image: url('../../Image/pexels-ann-h-1762851 (1).jpg');
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                    background-attachment: fixed;
-                    background-position: center;
-                }
-            </style>
-            @Html.Label("StudentName:")
-            <input type="text" name="Sn" required='true' />
-            <br />
-            <br />
-            <br />
-            @Html.Label("AttendedDays:")
-            <input type="text" value="@ViewBag.Ans" name="Ad" />
-            <br />
-            <br />
-            <br />
-            <input type="submit" value="Show" />
-        </center>
+            body {
+                height: 100%;
+                width: 100%;
+                margin: auto;
+                opacity: 0.5;
+                background-image: url('../../Image/pexels-ann-h-1762851 (1).jpg');
+                background-repeat: no-repeat;
+                background-size: 600px;
+                height: 100px;
+                width: -600px;
+                background-attachment: fixed;
+                background-position: center;
+            }
+        </style>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <h1>Student Form</h1>
+        <br />
+        <br />
+        <br />
+        <br />
+        @Html.Label("StudentName:")
+        <input type="text" name="Sn" required='true' />
+        <br />
+        <br />
+        <br />
+        @Html.Label("AttendedDays:")
+        <input type="text" value="@ViewBag.Ans" name="Ad" />
+        <br />
+        <br />
+        <br />
+        <input type="submit" value="Show" />
+    </center>
     }
 </div>
