--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 width: 100%;
                 margin: auto;
                 opacity: 0.5;
-                background-image: url('../../Image/micah-williams-lmFJOx7hPc4-unsplash.jpg');
+                background-image: url('../../Image/images (4).jpeg');
                 background-repeat: no-repeat;
                 background-size: 1000px;
                 height: 1000px;
@@ -66,6 +66,10 @@
         <br />
         <br />
         <br />
+        <form method="post" action="sendEmail"><div class="container"><span class="form-control-static">Receiver:</span>
+            <input class="form-control" type="text" name="Receiver"/><br /><span class="form-control-static">subject:</span>
+            <input class="form-control" type="text" name="subject"/><br /><span class="form-control-static">Message:</span>
+              <input class="form-control"</div></form>
     </center>
 
     }
