--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
         <form method="post" action="sendEmail"><div class="container"><span class="form-control-static">Receiver:</span>
             <input class="form-control" type="text" name="Receiver"/><br /><span class="form-control-static">subject:</span>
             <input class="form-control" type="text" name="subject"/><br /><span class="form-control-static">Message:</span>
-              <input class="form-control"</div></form>
+              <input class="form-control" type="text" name="Message"/><br /><input class="btn btn-primary" type="submit" value="send"/></div></form>
     </center>
 
     }
