--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -34,8 +34,6 @@
         <br />
         <br />
         <br />
-        <br />
-        <br />
         <label style="color:bisque;font:3000;">UserName:</label>
         <td>
             <input type="text" name="Un" required='true' />
@@ -66,10 +64,11 @@
         <br />
         <br />
         <br />
-        <form method="post" action="sendEmail"><div class="container"><span class="form-control-static">Receiver:</span>
-            <input class="form-control" type="text" name="Receiver"/><br /><span class="form-control-static">subject:</span>
-            <input class="form-control" type="text" name="subject"/><br /><span class="form-control-static">Message:</span>
-              <input class="form-control" type="text" name="Message"/><br /><input class="btn btn-primary" type="submit" value="send"/></div></form>
+        <form method="post" action="sendEmail"><div class="container"><span class="form-control-static"><label style="color:bisque;font:3000;">Receiver:</label></span>
+    <input class="form-control" type="text" name="Receiver" /><br /><span class="form-control-static"><label style="color:bisque;font:3000;">subject:</label></span>
+    <input class="form-control" type="text" name="subject" /><br /><span class="form-control-static"><label style="color:black;font:3000;">Message:</label></span>
+    <input class="form-control" type="text" name="Message" /><br /><input class="btn btn-primary" type="submit" value="send" />
+</div></form>
     </center>
 
     }
