--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -21,8 +21,12 @@
             <label for="Programs">String Reverse</label>
         </div>
         <div>
-            <input type="radio"    id="Programs" name="P1" value="StringPalindrome">
+            <input type="radio" id="Programs" name="P1" value="StringPalindrome">
             <label for="Programs">String Palindrome</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="StringLength">
+            <label for="Programs">String Length without using Library Function</label>
         </div>
         <br />
         <input type="submit" name="Process" value="Process" />
