Seperate Individual characters from String

--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -28,6 +28,14 @@
             <input type="radio" id="Programs" name="P1" value="StringLength">
             <label for="Programs">String Length without using Library Function</label>
         </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="IndividualcharactersInString">
+            <label for="Programs">Seperate Individual characters from String</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="IndividualcharactersOfStringInReverseOrder">
+            <label for="Programs">Seperate Individual characters from String in Reverse Order</label>
+        </div>
         <br />
         <input type="submit" name="Process" value="Process" />
     </fieldset>
