Number Of Words In String

--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -36,6 +36,10 @@
             <input type="radio" id="Programs" name="P1" value="IndividualcharactersOfStringInReverseOrder">
             <label for="Programs">Seperate Individual characters from String in Reverse Order</label>
         </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="NumberOfWordsInString">
+            <label for="Programs">NumberOfWordsInString</label>
+        </div>
         <br />
         <input type="submit" name="Process" value="Process" />
     </fieldset>
