Compare Two Strings Without using Library Function

--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -38,7 +38,15 @@
         </div>
         <div>
             <input type="radio" id="Programs" name="P1" value="NumberOfWordsInString">
-            <label for="Programs">NumberOfWordsInString</label>
+            <label for="Programs">Number Of Words In String</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="CompareTwoStrings">
+            <label for="Programs">Compare Two Strings Without using Library Function</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="NumberOfAlaphabetsandVowels">
+            <label for="Programs">Count Number Of Alaphabets and Vowels In a string</label>
         </div>
         <br />
         <input type="submit" name="Process" value="Process" />
