--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -48,6 +48,10 @@
             <input type="radio" id="Programs" name="P1" value="NumberOfAlaphabetsandVowels">
             <label for="Programs">Count Number Of Alaphabets and Vowels In a string</label>
         </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="StringCopy">
+            <label for="Programs">String Copy</label>
+        </div>
         <br />
         <input type="submit" name="Process" value="Process" />
     </fieldset>
